Updated to latest game SDK