@@ -18,17 +18,12 @@ repositories {
 }
 
 dependencies {
+    implementation("dev.emortal.minestom:game-sdk:9b4e2a5")
+
     implementation("dev.hollowcube:polar:1.3.1")
-//    implementation("com.github.EmortalMC:TNT:4ef1b53482")
     implementation("com.github.EmortalMC:MinestomPvP:6aefcba403")
 
-    implementation("dev.emortal.minestom:core:9c52249")
     implementation("net.kyori:adventure-text-minimessage:4.14.0")
-
-    implementation("dev.emortal.minestom:game-sdk:f6d9300")
-//    implementation("dev.emortal.api:kurushimi-sdk:5f9fde3") {
-//        exclude(group = "dev.emortal.minestom", module = "game-sdk")
-//    }
 }
 
 java {
@@ -37,12 +32,15 @@ java {
     }
 }
 
-tasks.withType<JavaCompile> {
-    options.encoding = "UTF-8"
-}
-
 tasks {
-    named<com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar>("shadowJar") {
+    compileJava {
+        options.compilerArgs.addAll(listOf(
+            "--enable-preview",
+            "--release", "20"
+        ))
+    }
+
+    shadowJar {
         mergeServiceFiles()
 
         manifest {
@@ -58,5 +56,7 @@ tasks {
         isReproducibleFileOrder = true
     }
 
-    build { dependsOn(shadowJar) }
+    build {
+        dependsOn(shadowJar)
+    }
 }
